tests/snapshots/snapshots__motion-reduced.snap
---
source: tests/snapshots.rs
expression: dump(&entry)
---
== dark-truecolor
✓ Done
                        ▸ Selected
patch applied to 3 files
---
r0 c0..1 fg=Live bg=Background
r0 c1..2 bg=Background
r0 c2..6 fg=Foreground bg=Background
r0 c6..40 bg=Background
r1 c0..24 bg=Background
r1 c24..25 fg=Primary bg=Background
r1 c25..26 bg=Background
r1 c26..34 fg=Foreground bg=Background
r1 c34..40 bg=Background
r2 c0..24 fg=Muted bg=Background
r2 c24..40 bg=Background

== dark-graphite
✓ Done
                        ▸ Selected
patch applied to 3 files
---
r0 c0..1 fg=Live bg=Background
r0 c1..2 bg=Background
r0 c2..6 fg=Foreground bg=Background
r0 c6..40 bg=Background
r1 c0..24 bg=Background
r1 c24..25 fg=Primary bg=Background
r1 c25..26 bg=Background
r1 c26..34 fg=Foreground bg=Background
r1 c34..40 bg=Background
r2 c0..24 fg=Muted bg=Background
r2 c24..40 bg=Background

== light-truecolor
✓ Done
                        ▸ Selected
patch applied to 3 files
---
r0 c0..1 fg=Live bg=Background
r0 c1..2 bg=Background
r0 c2..6 fg=Foreground bg=Background
r0 c6..40 bg=Background
r1 c0..24 bg=Background
r1 c24..25 fg=Primary bg=Background
r1 c25..26 bg=Background
r1 c26..34 fg=Foreground bg=Background
r1 c34..40 bg=Background
r2 c0..24 fg=Muted bg=Background
r2 c24..40 bg=Background

== dark-256
✓ Done
                        ▸ Selected
patch applied to 3 files
---
r0 c0..1 fg=Live bg=Background
r0 c1..2 bg=Background
r0 c2..6 fg=Foreground bg=Background
r0 c6..40 bg=Background
r1 c0..24 bg=Background
r1 c24..25 fg=Primary bg=Background
r1 c25..26 bg=Background
r1 c26..34 fg=Foreground bg=Background
r1 c34..40 bg=Background
r2 c0..24 fg=Muted bg=Background
r2 c24..40 bg=Background

== light-256
✓ Done
                        ▸ Selected
patch applied to 3 files
---
r0 c0..1 fg=Live bg=Background|Surface
r0 c1..2 bg=Background|Surface
r0 c2..6 fg=Foreground bg=Background|Surface
r0 c6..40 bg=Background|Surface
r1 c0..24 bg=Background|Surface
r1 c24..25 fg=Primary bg=Background|Surface
r1 c25..26 bg=Background|Surface
r1 c26..34 fg=Foreground bg=Background|Surface
r1 c34..40 bg=Background|Surface
r2 c0..24 fg=Muted bg=Background|Surface
r2 c24..40 bg=Background|Surface

== ansi-16
✓ Done
                        ▸ Selected
patch applied to 3 files
---
r0 c0..1 fg=Live
r1 c24..25 fg=Primary
r2 c0..24 dim

== unknown-ground
✓ Done
                        ▸ Selected
patch applied to 3 files
---
r0 c0..1 fg=Live
r1 c24..25 fg=Primary
r2 c0..24 dim

== no-color
✓ Done
                        ▸ Selected
patch applied to 3 files
---
r2 c0..24 dim

== ascii
Y Done
                        > Selected
patch applied to 3 files
---
r2 c0..24 dim
