tests/snapshots/snapshots__motion-started.snap
---
source: tests/snapshots.rs
expression: dump(&entry)
---
== dark-truecolor
✓ Done
▸ Selected

---
r0 c0..1 fg=Muted bg=Background
r0 c1..2 bg=Background
r0 c2..6 fg=Foreground bg=Background
r0 c6..40 bg=Background
r1 c0..1 fg=Primary bg=Background
r1 c1..2 bg=Background
r1 c2..10 fg=Foreground bg=Background
r1 c10..40 bg=Background
r2 c0..40 bg=Background

== dark-graphite
✓ Done
▸ Selected

---
r0 c0..1 fg=Muted bg=Background
r0 c1..2 bg=Background
r0 c2..6 fg=Foreground bg=Background
r0 c6..40 bg=Background
r1 c0..1 fg=Primary bg=Background
r1 c1..2 bg=Background
r1 c2..10 fg=Foreground bg=Background
r1 c10..40 bg=Background
r2 c0..40 bg=Background

== light-truecolor
✓ Done
▸ Selected

---
r0 c0..1 fg=Muted bg=Background
r0 c1..2 bg=Background
r0 c2..6 fg=Foreground bg=Background
r0 c6..40 bg=Background
r1 c0..1 fg=Primary bg=Background
r1 c1..2 bg=Background
r1 c2..10 fg=Foreground bg=Background
r1 c10..40 bg=Background
r2 c0..40 bg=Background

== dark-256
✓ Done
▸ Selected

---
r0 c0..1 fg=Live bg=Background
r0 c1..2 bg=Background
r0 c2..6 fg=Foreground bg=Background
r0 c6..40 bg=Background
r1 c0..1 fg=Primary bg=Background
r1 c1..2 bg=Background
r1 c2..10 fg=Foreground bg=Background
r1 c10..40 bg=Background
r2 c0..40 bg=Background

== light-256
✓ Done
▸ Selected

---
r0 c0..1 fg=Live bg=Background|Surface
r0 c1..2 bg=Background|Surface
r0 c2..6 fg=Foreground bg=Background|Surface
r0 c6..40 bg=Background|Surface
r1 c0..1 fg=Primary bg=Background|Surface
r1 c1..2 bg=Background|Surface
r1 c2..10 fg=Foreground bg=Background|Surface
r1 c10..40 bg=Background|Surface
r2 c0..40 bg=Background|Surface

== ansi-16
✓ Done
▸ Selected

---
r0 c0..1 fg=Live
r1 c0..1 fg=Primary

== unknown-ground
✓ Done
▸ Selected

---
r0 c0..1 fg=Live
r1 c0..1 fg=Primary

== no-color
✓ Done
▸ Selected

---

== ascii
Y Done
> Selected

---
