tests/snapshots/snapshots__native-composer-narrow.snap
---
source: tests/snapshots.rs
expression: dump(&entry)
---
== dark-truecolor
╭──────────────────────────────────────╮
│  Review the changes, then            │
│❯ continue.                       [↵] │
╰Enter send ───────────────────────────╯
---
r0 c0..40 fg=Primary bg=Surface
r1 c0..1 fg=Primary bg=Surface
r1 c1..3 bg=Surface
r1 c3..28 fg=Foreground bg=Surface
r1 c28..39 bg=Surface
r1 c39..40 fg=Primary bg=Surface
r2 c0..2 fg=Primary bg=Surface
r2 c2..3 bg=Surface
r2 c3..12 fg=Foreground bg=Surface
r2 c12..35 bg=Surface
r2 c35..38 fg=Primary bg=Surface bold
r2 c38..39 bg=Surface
r2 c39..40 fg=Primary bg=Surface
r3 c0..40 fg=Primary bg=Surface

== dark-graphite
╭──────────────────────────────────────╮
│  Review the changes, then            │
│❯ continue.                       [↵] │
╰Enter send ───────────────────────────╯
---
r0 c0..40 fg=Primary bg=Surface
r1 c0..1 fg=Primary bg=Surface
r1 c1..3 bg=Surface
r1 c3..28 fg=Foreground bg=Surface
r1 c28..39 bg=Surface
r1 c39..40 fg=Primary bg=Surface
r2 c0..2 fg=Primary bg=Surface
r2 c2..3 bg=Surface
r2 c3..12 fg=Foreground bg=Surface
r2 c12..35 bg=Surface
r2 c35..38 fg=Primary bg=Surface bold
r2 c38..39 bg=Surface
r2 c39..40 fg=Primary bg=Surface
r3 c0..40 fg=Primary bg=Surface

== light-truecolor
╭──────────────────────────────────────╮
│  Review the changes, then            │
│❯ continue.                       [↵] │
╰Enter send ───────────────────────────╯
---
r0 c0..40 fg=Primary
r1 c0..1 fg=Primary
r1 c3..28 fg=Foreground
r1 c39..40 fg=Primary
r2 c0..2 fg=Primary
r2 c3..12 fg=Foreground
r2 c35..38 fg=Primary bold
r2 c39..40 fg=Primary
r3 c0..40 fg=Primary

== dark-256
╭──────────────────────────────────────╮
│  Review the changes, then            │
│❯ continue.                       [↵] │
╰Enter send ───────────────────────────╯
---
r0 c0..40 fg=Primary bg=Surface|Hover|DiffRemovedTint
r1 c0..1 fg=Primary bg=Surface|Hover|DiffRemovedTint
r1 c1..3 bg=Surface|Hover|DiffRemovedTint
r1 c3..28 fg=Foreground bg=Surface|Hover|DiffRemovedTint
r1 c28..39 bg=Surface|Hover|DiffRemovedTint
r1 c39..40 fg=Primary bg=Surface|Hover|DiffRemovedTint
r2 c0..2 fg=Primary bg=Surface|Hover|DiffRemovedTint
r2 c2..3 bg=Surface|Hover|DiffRemovedTint
r2 c3..12 fg=Foreground bg=Surface|Hover|DiffRemovedTint
r2 c12..35 bg=Surface|Hover|DiffRemovedTint
r2 c35..38 fg=Primary bg=Surface|Hover|DiffRemovedTint bold
r2 c38..39 bg=Surface|Hover|DiffRemovedTint
r2 c39..40 fg=Primary bg=Surface|Hover|DiffRemovedTint
r3 c0..40 fg=Primary bg=Surface|Hover|DiffRemovedTint

== light-256
╭──────────────────────────────────────╮
│  Review the changes, then            │
│❯ continue.                       [↵] │
╰Enter send ───────────────────────────╯
---
r0 c0..40 fg=Primary
r1 c0..1 fg=Primary
r1 c3..28 fg=Foreground
r1 c39..40 fg=Primary
r2 c0..2 fg=Primary
r2 c3..12 fg=Foreground
r2 c35..38 fg=Primary bold
r2 c39..40 fg=Primary
r3 c0..40 fg=Primary

== ansi-16
╭──────────────────────────────────────╮
│  Review the changes, then            │
│❯ continue.                       [↵] │
╰Enter send ───────────────────────────╯
---
r0 c0..40 fg=Primary
r1 c0..1 fg=Primary
r1 c39..40 fg=Primary
r2 c0..2 fg=Primary
r2 c35..38 fg=Primary bold
r2 c39..40 fg=Primary
r3 c0..40 fg=Primary

== unknown-ground
╭──────────────────────────────────────╮
│  Review the changes, then            │
│❯ continue.                       [↵] │
╰Enter send ───────────────────────────╯
---
r0 c0..40 fg=Primary
r1 c0..1 fg=Primary
r1 c39..40 fg=Primary
r2 c0..2 fg=Primary
r2 c35..38 fg=Primary bold
r2 c39..40 fg=Primary
r3 c0..40 fg=Primary

== no-color
╭──────────────────────────────────────╮
│  Review the changes, then            │
│❯ continue.                       [↵] │
╰Enter send ───────────────────────────╯
---
r2 c35..38 bold

== ascii
+--------------------------------------+
|  Review the changes, then            |
|> continue.                       [>] |
+Enter send ---------------------------+
---
r2 c35..38 bold
