tests/snapshots/snapshots__native-composer-quiet.snap
---
source: tests/snapshots.rs
expression: dump(&entry)
---
== dark-truecolor
────────────────────────────────────────────────────────────
❯ Write a task or use /.
---
r0 c0..60 fg=Border bg=Surface
r1 c0..1 fg=Primary bg=Surface
r1 c1..2 bg=Surface
r1 c2..24 fg=BorderStrong bg=Surface
r1 c24..60 bg=Surface

== dark-graphite
────────────────────────────────────────────────────────────
❯ Write a task or use /.
---
r0 c0..60 fg=Border bg=Surface
r1 c0..1 fg=Primary bg=Surface
r1 c1..2 bg=Surface
r1 c2..24 fg=BorderStrong bg=Surface
r1 c24..60 bg=Surface

== light-truecolor
────────────────────────────────────────────────────────────
❯ Write a task or use /.
---
r0 c0..60 fg=Border
r1 c0..1 fg=Primary
r1 c2..24 fg=BorderStrong

== dark-256
────────────────────────────────────────────────────────────
❯ Write a task or use /.
---
r0 c0..60 fg=Border bg=Surface|Hover|DiffRemovedTint
r1 c0..1 fg=Primary bg=Surface|Hover|DiffRemovedTint
r1 c1..2 bg=Surface|Hover|DiffRemovedTint
r1 c2..24 fg=BorderStrong bg=Surface|Hover|DiffRemovedTint
r1 c24..60 bg=Surface|Hover|DiffRemovedTint

== light-256
────────────────────────────────────────────────────────────
❯ Write a task or use /.
---
r0 c0..60 fg=Border
r1 c0..1 fg=Primary
r1 c2..24 fg=BorderStrong

== ansi-16
────────────────────────────────────────────────────────────
❯ Write a task or use /.
---
r0 c0..60 dim
r1 c0..1 fg=Primary
r1 c2..24 dim

== unknown-ground
────────────────────────────────────────────────────────────
❯ Write a task or use /.
---
r0 c0..60 dim
r1 c0..1 fg=Primary
r1 c2..24 dim

== no-color
────────────────────────────────────────────────────────────
❯ Write a task or use /.
---
r0 c0..60 dim
r1 c2..24 dim

== ascii
------------------------------------------------------------
> Write a task or use /.
---
r0 c0..60 dim
r1 c2..24 dim
